# langgraph-expert-orchestrator

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: conversations.py  llm_config.py  main.py  models.py  sse.py
backend/app/infrastructure/: conversation_repository.py  security_data_repository.py
backend/app/langgraph/: graph.py  router.py
backend/app/langgraph/experts/: cert.py  host.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_real_llm.py  test_stream_endpoint.py  utils.py
backend/tests/unit/: test_dataset_repo.py  test_experts.py  test_router.py  test_streaming.py
docs/prompts/: compressed_docs.md  gemini-react-deepsearch.md  langgraph-llms-full.md  langgraph-llms-short.md  langgraphjs-llms-full.md  langgraphjs-llms-short.md  plan.md  pruneb.sh  prunef.sh
frontend/: .dockerignore  .env.example  Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.tsx  setupTests.ts  types.ts
frontend/src/app/: store.ts
frontend/src/constants/: testData.ts
frontend/src/features/chat/: ChatWindow.tsx  chatSlice.test.ts  chatSlice.ts  useChat.ts
frontend/src/ui/: InputBar.tsx  Md.tsx
